# Agentic-AI-Defense-Data-Extraction

./: .gitignore  AI Agent Defense Extraction FinalVersion_v2.ipynb  Agentic_AI_Defense_(Notebook).ipynb  Big Sample Data_5_2026.xlsx  Definition for each header.docx  Output V4_Jan 29, 2026_QC.xlsx  Processed_Defense_Data.xlsx  ai.ipynb  app.py  defense_v2.rar  knowledgebase.py  main.py  pyproject.toml  requirements.txt  source_file.xlsx
data/: sample_data.xlsx  source_file.xlsx
notebook/: AI Agent Defense Extraction FinalVersion.ipynb  AI Agent Tool.ipynb  Agentic_AI_Defense_(Notebook).ipynb  Processed_Defense_Data.csv  Processed_Defense_Data.xlsx  Verified_Output.csv  prompts.py  sample_data.xlsx  suppliers.json  taxonomy.json  testing.ipynb  v2.ipynb  workflow.mmd
notebook/system_kb_store/: system_kb.faiss
system_kb_store/: system_kb_meta.pkl
